<resources>
    <string name="app_name">Notes App</string>

    //Navigation Drawer
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="text_nav_notes">Notes</string>
    <string name="text_nav_archives">Archives</string>
    <string name="text_nav_dark_theme">Dark Theme</string>

    //home activity
    <string name="home_text_notes">Notes</string>
    <string name="home_desc_fab">Add New Note</string>
    <string name="home_placeholder_text">%s you add appear here</string>
    <string name="desc_switch_layout">Switch Layout</string>

    //Note list item
    <string name="placeholder_note_header">Header</string>
    <string name="placeholder_note_body">Body</string>

    //add note activity
    <string name="text_hint_title">Title</string>
    <string name="text_hint_note">Note</string>
    <string name="desc_back_button">Back Button</string>
    <string name="desc_delete_button">Delete Button</string>
    <string name="desc_archive_button">Archive Button</string>
    <string name="desc_color_picker">Color Picker</string>
</resources>